HTML-Generator: Getter durch Properties in Templates ersetzt
Durch den Wegfall der Präfixe `is` und `get` sowie der Klammern `()`
ist die Schreibweise kompakter.

--- a/src/main/resources/generator/html/alleobjekte-frame.vm
+++ b/src/main/resources/generator/html/alleobjekte-frame.vm
@@ -14,9 +14,9 @@
 <div class="content">
     <ul class="objekte">
         #foreach( $objekt in $objekte )
-        <li><a href="${objekt.getBereich().getZustaendiger().getPid()}/${objekt.getBereich().getPid()}/${objekt.getPid()}.html" target="objektFrame">
+        <li><a href="${objekt.bereich.zustaendiger.pid}/${objekt.bereich.pid}/${objekt.pid}.html" target="objektFrame">
             #if ( ${objekt.class.simpleName} == "Typ" )<em>#end
-            $objekt.getNameOderPid()
+            $objekt.nameOderPid
             #if ( ${objekt.class.simpleName} == "Typ" )</em>#end
         </a></li>
         #end
