--- a/src/main/resources/generator/html/konfigurationsverantwortlicher-ueberblick.vm
+++ b/src/main/resources/generator/html/konfigurationsverantwortlicher-ueberblick.vm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <title>Konfigurationsverantwortlicher ${konfigurationsverantwortlicher.getNameOderPid()}</title>
+    <title>Konfigurationsverantwortlicher ${konfigurationsverantwortlicher.nameOderPid}</title>
     <base href="../">
     <meta charset="UTF-8">
     <meta name="date" content="2015-12-05"/>
@@ -13,7 +13,7 @@
     <!--
     try {
         if (location.href.indexOf('is-external=true') == -1) {
-            parent.document.title = "${konfigurationsverantwortlicher.getNameOderPid()} (${projekt})";
+            parent.document.title = "${konfigurationsverantwortlicher.nameOderPid} (${projekt})";
         }
     }
     catch (err) {
@@ -30,14 +30,14 @@
 </div>
 <div class="subheader">
     <ul>
-        <li><a href="index.html?${konfigurationsverantwortlicher.getPid()}/konfigurationsverantwortlicher-ueberblick.html" target="_top">Mit Frames</a></li>
-        <li><a href="${konfigurationsverantwortlicher.getPid()}/konfigurationsverantwortlicher-ueberblick.html" target="_top">Ohne Frames</a></li>
+        <li><a href="index.html?${konfigurationsverantwortlicher.pid}/konfigurationsverantwortlicher-ueberblick.html" target="_top">Mit Frames</a></li>
+        <li><a href="${konfigurationsverantwortlicher.pid}/konfigurationsverantwortlicher-ueberblick.html" target="_top">Ohne Frames</a></li>
     </ul>
 </div>
 <div class="content">
-    <h1>Konfigurationsverantwortlicher ${konfigurationsverantwortlicher.getNameOderPid()} (${konfigurationsverantwortlicher.getPid()})</h1>
-    <p>${konfigurationsverantwortlicher.getKurzinfo()}</p>
-    <p>${konfigurationsverantwortlicher.getBeschreibung()}</p>
+    <h1>Konfigurationsverantwortlicher ${konfigurationsverantwortlicher.nameOderPid} (${konfigurationsverantwortlicher.pid})</h1>
+    <p>${konfigurationsverantwortlicher.kurzinfo}</p>
+    <p>${konfigurationsverantwortlicher.beschreibung}</p>
     <div class="ueberblick">
         <table border="0" cellpadding="0" cellspacing="0">
             <caption><span>Konfigurationsbereiche</span></caption>
@@ -49,8 +49,8 @@
             #set( $row = 1 )
             #foreach( $konfigurationsbereich in $konfigurationsbereiche )
             <tr>
-                <td class="colFirst #if ($row % 2 == 0) rowColor #else altColor #end"><a href="${konfigurationsbereich.getZustaendiger().getPid()}/${konfigurationsbereich.getPid()}/konfigurationsbereich-ueberblick.html">${konfigurationsbereich.getNameOderPid()}</a></td>
-                <td class="#if ($row % 2 == 0) rowColor #else altColor #end block">${konfigurationsbereich.getKurzinfo()}</td>
+                <td class="colFirst #if ($row % 2 == 0) rowColor #else altColor #end"><a href="${konfigurationsbereich.zustaendiger.pid}/${konfigurationsbereich.pid}/konfigurationsbereich-ueberblick.html">${konfigurationsbereich.nameOderPid}</a></td>
+                <td class="#if ($row % 2 == 0) rowColor #else altColor #end block">${konfigurationsbereich.kurzinfo}</td>
             </tr>
             #set( $row = $row + 1 )
             #end
