--- a/src/main/resources/generator/html/ueberblick.vm
+++ b/src/main/resources/generator/html/ueberblick.vm
@@ -46,10 +46,10 @@
                 #set( $row = 1 )
                 #foreach( $konfigurationsverantwortlicher in $verantwortlichkeiten.keySet() )
                 <tr>
-                    <td class="colFirst #if ($row % 2 == 0) rowColor #else altColor #end"><a href="${konfigurationsverantwortlicher.getPid()}/konfigurationsverantwortlicher-ueberblick.html">${konfigurationsverantwortlicher.getNameOderPid()}</a></td>
+                    <td class="colFirst #if ($row % 2 == 0) rowColor #else altColor #end"><a href="${konfigurationsverantwortlicher.pid}/konfigurationsverantwortlicher-ueberblick.html">${konfigurationsverantwortlicher.nameOderPid}</a></td>
                     <td class="colFirst #if ($row % 2 == 0) rowColor #else altColor #end">
                     #foreach( $konfigurationsbereich in $verantwortlichkeiten.get($konfigurationsverantwortlicher) )
-                        <a href="${konfigurationsbereich.getZustaendiger().getPid()}/${konfigurationsbereich.getPid()}/konfigurationsbereich-ueberblick.html">${konfigurationsbereich.getNameOderPid()}</a>#if( $velocityHasNext )<br>#end
+                        <a href="${konfigurationsbereich.zustaendiger.pid}/${konfigurationsbereich.pid}/konfigurationsbereich-ueberblick.html">${konfigurationsbereich.nameOderPid}</a>#if( $velocityHasNext )<br>#end
                     #end
                     </td>
                 </tr>
@@ -69,8 +69,8 @@
                 #set( $row = 1 )
                 #foreach( $konfigurationsverantwortlicher in $konfigurationsverantwortliche )
                 <tr>
-                    <td class="colFirst #if ($row % 2 == 0) rowColor #else altColor #end"><a href="${konfigurationsverantwortlicher.getPid()}/konfigurationsverantwortlicher-ueberblick.html">${konfigurationsverantwortlicher.getNameOderPid()}</a></td>
-                    <td class="#if ($row % 2 == 0) rowColor #else altColor #end block">${konfigurationsverantwortlicher.getKurzinfo()}</td>
+                    <td class="colFirst #if ($row % 2 == 0) rowColor #else altColor #end"><a href="${konfigurationsverantwortlicher.pid}/konfigurationsverantwortlicher-ueberblick.html">${konfigurationsverantwortlicher.nameOderPid}</a></td>
+                    <td class="#if ($row % 2 == 0) rowColor #else altColor #end block">${konfigurationsverantwortlicher.kurzinfo}</td>
                 </tr>
                     #set( $row = $row + 1 )
                 #end
@@ -88,8 +88,8 @@
             #set( $row = 1 )
             #foreach( $konfigurationsbereich in $konfigurationsbereiche )
             <tr>
-                <td class="colFirst #if ($row % 2 == 0) rowColor #else altColor #end"><a href="${konfigurationsbereich.getZustaendiger().getPid()}/${konfigurationsbereich.getPid()}/konfigurationsbereich-ueberblick.html">${konfigurationsbereich.getNameOderPid()}</a></td>
-                <td class="#if ($row % 2 == 0) rowColor #else altColor #end block">${konfigurationsbereich.getKurzinfo()}</td>
+                <td class="colFirst #if ($row % 2 == 0) rowColor #else altColor #end"><a href="${konfigurationsbereich.zustaendiger.pid}/${konfigurationsbereich.pid}/konfigurationsbereich-ueberblick.html">${konfigurationsbereich.nameOderPid}</a></td>
+                <td class="#if ($row % 2 == 0) rowColor #else altColor #end block">${konfigurationsbereich.kurzinfo}</td>
             </tr>
             #set( $row = $row + 1 )
             #end
