--- a/src/main/resources/generator/html/attributgruppe.vm
+++ b/src/main/resources/generator/html/attributgruppe.vm
@@ -38,7 +38,9 @@
     <p>${attributgruppe.bereich.zustaendiger.nameOderPid} / ${attributgruppe.bereich.nameOderPid}</p>
     <h1>Attributgruppe ${attributgruppe.nameOderPid} (${attributgruppe.pid})</h1>
     <p>${attributgruppe.kurzinfo}</p>
-    <p>${attributgruppe.eschreibung}</p>
+    #if( !$attributgruppe.beschreibung.empty )
+    <p>${attributgruppe.beschreibung}</p>
+    #end
     #if( !$attributgruppe.attribute.empty )
         <div class="ueberblick">
             <table border="0" cellpadding="0" cellspacing="0">
